--- a/src/app/src/_modules/admin/admin-template/admin-template.component.html
+++ b/src/app/src/_modules/admin/admin-template/admin-template.component.html
@@ -16,7 +16,7 @@
 
     <!-- Nav Item - Dashboard -->
     <li class="nav-item active">
-      <a class="nav-link">
+      <a class="nav-link "routerLink='/admin'>
         <i class="fa fa-archive"></i>
         <span>Dashboard</span></a>
     </li>
