--- a/src/app/src/_modules/home/course-detail/course-detail.component.html
+++ b/src/app/src/_modules/home/course-detail/course-detail.component.html
@@ -92,66 +92,7 @@
 
                             </div>
                         </div>
-                        <!-- <div class="card">
-                            <div class="card-header d-flex justify-content-between justify-item-center">
-                                <div class="collapse-icon-left d-flex">
-                                    <div class="box-icon">
-                                        <i class="material-icons icon-left m-auto">people</i>
-                                    </div>
-                                    <div class="box-text">
-                                        <span class="lead">Tổng quan</span>
-                                        <h3 class="mb-1">Giới thiệu về khóa học</h3>
-                                    </div>
-
-                                </div>
-                                <div class="collapse-icon-right ml-auto mr-0 mr-sm-3 d-flex align-items-center">
-                                    <i class="material-icons icon-right text-center " data-toggle="collapse"
-                                        href="#collapseThree">add</i>
-                                </div>
-
-                            </div>
-                            <div id="collapseThree" class="collapse" data-parent="#accordion">
-                                <div class="card-body">
-                                    Lorem ipsum..
-                                </div>
-                                <div class="card-body">
-                                    Lorem ipsum..
-                                </div>
-                                <div class="card-body">
-                                    Lorem ipsum..
-                                </div>
-                            </div>
-                        </div>
-                        <div class="card">
-                            <div class="card-header d-flex justify-content-between justify-item-center">
-                                <div class="collapse-icon-left d-flex">
-                                    <div class="box-icon">
-                                        <i class="fa fa-file icon-left m-auto"></i>
-                                    </div>
-                                    <div class="box-text">
-                                        <span class="lead">Tổng quan</span>
-                                        <h3 class="mb-1">Giới thiệu về khóa học</h3>
-                                    </div>
-
-                                </div>
-                                <div class="collapse-icon-right ml-auto mr-0 mr-sm-3 d-flex align-items-center">
-                                    <i class="material-icons icon-right text-center " data-toggle="collapse"
-                                        href="#collapseFour">add</i>
-                                </div>
-
-                            </div>
-                            <div id="collapseFour" class="collapse" data-parent="#accordion">
-                                <div class="card-body">
-                                    Lorem ipsum..
-                                </div>
-                                <div class="card-body">
-                                    Lorem ipsum..
-                                </div>
-                                <div class="card-body">
-                                    Lorem ipsum..
-                                </div>
-                            </div>
-                        </div> -->
+                        
                     </div>
                 </div>
                 <div class="tab-pane" id="main">
@@ -230,8 +171,8 @@
                             <h1>Bình luận</h1>
                             <form #frmComment='ngForm' (ngSubmit)='comment(frmComment.value)'>
 
-                                <textarea placeholder="Write your comment here" name="NoiDung" ngModel
-                                    #content='ngModel' required minlength="5"></textarea>
+                                <textarea type='text' placeholder="Write your comment here" name="NoiDung" ngModel
+                                    #content='ngModel' required minlength="5" id="cmtBox"></textarea>
 
                                 <div>
 
@@ -280,9 +221,9 @@
 
                             <form #frmRate='ngForm' (ngSubmit)='rate(frmRate.value)'>
                                 <textarea placeholder="Tiêu đề" name="TieuDe" ngModel #title='ngModel' required
-                                    class="form-control" rows="1"></textarea>
+                                    class="form-control" rows="1" id="rateBox"></textarea>
                                 <br>
-                                <textarea placeholder="Đánh giá của bạn" name="NoiDung" ngModel #content='ngModel'
+                                <textarea placeholder="Đánh giá của bạn" name="NoiDung" ngModel #rateBox='ngModel'
                                     required minlength="5"></textarea>
 
                                 <div>
