--- a/src/app/src/_modules/home/course-watch/course-watch.component.html
+++ b/src/app/src/_modules/home/course-watch/course-watch.component.html
@@ -8,10 +8,10 @@
           </a>
         </div>
         <div id="baiGiang" class="collapse show" data-parent="#accordion"
-          *ngFor='let video of baiGiangList;let i=index;'>
-          <div class="card-body">
-            <a (click)='changeLecture(video.EmbededURL)' [attr.data-set]='video.EmbededURL' #link> <i
-                class="fa fa-play-circle mr-2"></i>Bài {{i+1}}: {{video.TenBaiGiang}}</a>
+          >
+          <div class="card-body" *ngFor='let video of baiGiangList;let i=index;'>
+            <a (click)='changeLecture(video.EmbededURL);getCauHoi(video.id)' [attr.data-set]='video.EmbededURL' #link>
+              <i class="fa fa-play-circle mr-2"></i>Bài {{i+1}}: {{video.TenBaiGiang}}</a>
           </div>
         </div>
       </div>
@@ -21,25 +21,63 @@
             Danh Sách Câu hỏi
           </a>
         </div>
-        <div id="cauHoi" class="collapse " data-parent="#accordion" >
-          <div class="card-body">
-            <div id="accordionCauHoi">
+        <div id="cauHoi" class="collapse " data-parent="#accordion">
+          
+            <ul class="comment-section">
+              <h3 class="lead display-4" *ngIf='flagNull'>Chưa có bình luận nào. Hãy là người đầu tiên để lại
+                  bình luận</h3>
               
-                <a data-toggle="collapse" href='#baiGiangHello'>
-                  Câu Hỏi Cho Bài Giảng 
-                </a>              
-                <div id="baiGiangHello" class="collapse " data-parent="#accordionCauHoi">
-                  <div class="card-body">
-                    123123
-                  </div>
-                </div>
-              
+              <h1>Trang Đánh giá</h1>
+                        <li class="comment user-comment" *ngFor='let cauhoi of danhSachCauHoi'>
 
-            </div>
-          </div>
+                            <div class="info">
+                                <a>{{cauhoi.user}}</a>
+                                <span>{{cauhoi.ThoiGian}}</span>
+
+                            </div>
+
+                            <a class="avatar">
+                                <img src={{cauhoi.HinhUser}} width="50" height="50" alt="Profile Avatar" title="{{cauhoi.user}}" />
+
+                            </a>
+                            <div>
+                                <h5 class="rate-content">{{cauhoi.TieuDe}}</h5>
+                                <p class="rate-content">{{cauhoi.NoiDung}}</p>
+                                <a class="rate-delete" (click)='xoaQues(cauhoi.id)' *ngIf='checkQues(cauhoi.user)'>x</a>
+
+                            </div>
+
+                        </li>
+                        <li class="write-new">
+                            <h1>Đánh Giá</h1>
+
+                            <form #frmCauHoi='ngForm' (ngSubmit)='themCauHoi(frmCauHoi.value)'>
+                                <textarea placeholder="Tiêu đề" name="TieuDe" ngModel #title='ngModel' required
+                                    class="form-control" rows="1" cols='4' id="askBox" minlength="5"></textarea>
+                                <br>
+                                <textarea placeholder="Đánh giá của bạn" name="NoiDung" ngModel #rateBox='ngModel'
+                                    required minlength="5" id="askContent"  rows="4" cols='4'></textarea>
+
+                                <div>
+                            
+                                    
+                                    <button type="submit" class="btn btn-primary btn-start waves-light"
+                                        style="width: 150px;" mdbWavesEffect [disabled]='frmCauHoi.invalid'>Đặt câu hỏi</button>
+                                </div>
+
+                            </form>
+
+                        </li><br>
+              
+          </ul>
+          
         </div>
       </div>
     </div>
+    <a class="card-link" routerLink='/chitietkhoahoc/{{idKhoaHoc}}/{{mangKhid}}'>
+      <i class="fa fa-arrow-left" aria-hidden="true" ></i>
+      Quay về trang chủ
+    </a>
   </div>
 
   <!-- Use any element to open the sidenav -->
