--- a/src/app/src/_modules/home/sign-up/sign-up.component.html
+++ b/src/app/src/_modules/home/sign-up/sign-up.component.html
@@ -171,7 +171,7 @@
             </form>
             <hr>
             <div class="text-center">
-              <a class="small" href="">Forgot Password?</a>
+              <a class="small" routerLink='/reset-password'>Forgot Password?</a>
             </div>
             <div class="text-center">
               <a class="small" routerLink="/login">Already have an account? Login!</a>
