--- a/src/app/src/_modules/home/footer/footer.component.html
+++ b/src/app/src/_modules/home/footer/footer.component.html
@@ -8,18 +8,16 @@
               <div class="col-md-4 col-xs-12 sm-bottom-40">
                   <div class="widget about-widget">
                       <div class="widget-inner">
-                          <a class="footer-logo" href="index.html">
+                          <a class="footer-logo" routerLink='/'>
                               <img src="https://www.khoahocdt.com/Logo.png" alt="Footer logo" width="150" height="150">
                           </a>
                           <p class="about-text">Học không giới hạn cùng chúng tôi</p>
                           <div class="footer-social">
                               <h5 class="footer-social-title">Kết nối ngay với chúng tôi</h5>
                               <div class="socials">
-                                  <a href="#"><i class="fa fa-facebook"></i></a>
-                                  <a href="#"><i class="fa fa-twitter"></i></a>
-                                  <a href="#"><i class="fa fa-google-plus"></i></a>
-                                  <a href="#"><i class="fa fa-youtube-play"></i></a>
-                                  <a href="#"><i class="fa fa-instagram"></i></a>
+                                  <a href="https://www.facebook.com/dogezeerf"><i class="fa fa-facebook"></i></a>
+                                  
+                                  
                               </div>
                           </div>
                       </div>
@@ -60,10 +58,7 @@
           <div class="row">
               <div class="col-md-6 col-sm-7 col-xs-12 xs-text-center">
                   <ul class="footer-nav">
-                      <li><a href="#">About</a></li>
-                      <li><a href="#">Careers</a></li>
-                      <li><a href="#">Terms of Use</a></li>
-                      <li><a href="#">Privacy Policy</a></li>
+                      
                   </ul>
               </div>
               <div class="col-md-6 col-sm-5 col-xs-12 xs-text-center">
