--- a/src/app/src/_modules/admin/admin-template/admin-template.component.html
+++ b/src/app/src/_modules/admin/admin-template/admin-template.component.html
@@ -151,7 +151,9 @@
         <span>Duyệt khóa học</span></a>
     </li>
     <hr class="sidebar-divider d-none d-md-block">
-
+    <div class="sidebar-heading">
+        Quản Lý Chung
+      </div>
     <li class="nav-item">
       <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseThree" aria-expanded="true"
         aria-controls="collapseThree">
@@ -169,6 +171,22 @@
         </div>
       </div>
     </li>
+    <li class="nav-item">
+        <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseLevel" aria-expanded="true"
+          aria-controls="collapseLevel">
+          <i class="fa fa-fw fa-table "></i>
+          <span>Level User</span>
+        </a>
+        <div id="collapseLevel" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
+          <div class="bg-white py-2 collapse-inner rounded">
+            <h6 class="collapse-header">Báo cáo</h6>
+            <a class="collapse-item" routerLink='level'>
+              Danh Sách Level</a>
+            
+  
+          </div>
+        </div>
+      </li>
     <li class="nav-item">
         <a routerLink='/' class="turn-back"><i class="fa fa-arrow-left mr-2" aria-hidden="true"></i>Về trang chủ</a>
       </li>
