--- a/src/app/src/_modules/home/cart/cart.component.html
+++ b/src/app/src/_modules/home/cart/cart.component.html
@@ -36,7 +36,7 @@
                     </div>
                     <br>
                     <div class="more-cart clearfix">
-                        <a href="/khoa-hoc-noi-bat" class="pull-left"><i class="fa fa-plus"></i> Chọn thêm khóa học</a>
+                        <a routerLink="/khoa-hoc-noi-bat" class="pull-left"><i class="fa fa-plus"></i> Chọn thêm khóa học</a>
                     </div>
                 </div>
                 <div class="col-lg-5 col-md-4 col-sm-4">
