--- a/src/app/src/_modules/admin/admin-bai-giang/admin-bai-giang.component.html
+++ b/src/app/src/_modules/admin/admin-bai-giang/admin-bai-giang.component.html
@@ -41,38 +41,6 @@
       </mat-form-field>
     </form>
   </div>
-  <table class="table table-bordered table-responsive-sm col-md-12 table-striped" id="dataTable1" width="100%"
-    cellspacing="0">
-    <thead class="table-primary">
-      <tr>
-        <th>ID</th>
-        <th>ID Khóa Học</th>
-        <th>Tên Bài Giảng</th>
-        <th>Mô Tả</th>
-        <th>Link</th>
-        <th>Thao Tác</th>
-
-      </tr>
-    </thead>
-
-    <tbody>
-      <tr *ngFor='let baiGiang of danhSachBaiGiang'>
-        <td>{{baiGiang.id}}</td>
-        <td>{{baiGiang.KhoaHoc_id}}</td>
-        <td>{{baiGiang.TenBaiGiang}}</td>
-        <td>{{baiGiang.MoTa}}</td>
-        <td>{{baiGiang.EmbededURL}}</td>
-        
-        <td>
-          <button matButton (click)='updateTriggered(baiGiang.id,baiGiang.KhoaHoc_id,baiGiang.TenBaiGiang,baiGiang.MoTa,baiGiang.EmbededURL)' 
-          class="btn mr-3 btn-info">Cập
-              nhật </button>
-          <button matButton (click)='delele(baiGiang.id,baiGiang.KhoaHoc_id)' class="btn btn-danger">Xóa</button>
-        </td>
-
-      </tr>
-    </tbody>
-  </table>
   <div class="col-md-10 mx-auto" *ngIf='flag' id="updateRole">
     <h3>Cập nhật bài bài giảng</h3>
     <form #frmUpdate='ngForm' (ngSubmit)='update(frmUpdate.value)' class="col-md-12" >
@@ -105,5 +73,39 @@
       <button mat-button type="submit" [disabled]='frmUpdate.invalid' class="btn-success">Cập nhật</button>
     </form>
   </div>
+  <table class="table table-bordered table-responsive-sm col-md-12 table-striped" id="dataTable1" width="100%"
+    cellspacing="0">
+    <thead class="table-primary">
+      <tr>
+        <th>ID</th>
+        <th>ID Khóa Học</th>
+        <th>Tên Bài Giảng</th>
+        <th>Mô Tả</th>
+        <th>Link</th>
+        <th>Thao Tác</th>
+
+      </tr>
+    </thead>
+
+    <tbody>
+      <tr *ngFor='let baiGiang of danhSachBaiGiang'>
+        <td>{{baiGiang.id}}</td>
+        <td>{{baiGiang.KhoaHoc_id}}</td>
+        <td>{{baiGiang.TenBaiGiang}}</td>
+        <td>{{baiGiang.MoTa}}</td>
+        <td>{{baiGiang.EmbededURL}}</td>
+        
+        <td>
+          <button matButton (click)='updateTriggered(baiGiang.id,baiGiang.KhoaHoc_id,baiGiang.TenBaiGiang,baiGiang.MoTa,baiGiang.EmbededURL)' 
+          class="btn mr-3 btn-info">Cập
+              nhật </button>
+          <button matButton (click)='xemCauHoi(baiGiang.id)' class="btn btn-danger">Xem câu hỏi</button>
+          <button matButton (click)='delele(baiGiang.id,baiGiang.KhoaHoc_id)' class="btn btn-danger">Xóa</button>
+        </td>
+
+      </tr>
+    </tbody>
+  </table>
+  
   
 </div>
