--- a/src/app/src/_modules/admin/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/src/_modules/admin/admin-dashboard/admin-dashboard.component.html
@@ -3,20 +3,24 @@
     cellspacing="0">
     <thead class="table-primary">
       <tr>
+        <th>ID</th>
         <th>Khóa Học</th>
         <th>Tên Người Dùng</th>
+        <th>Email</th>
         <th>Tổng Tiền</th>
-        
+        <th>Thao Tác</th>
 
       </tr>
     </thead>
 
     <tbody>
       <tr *ngFor='let bill of danhSachThanhToan'>
+          <td>{{bill.id}}</td>
         <td>{{bill.KhoaHoc}}</td>
         <td>{{bill.user}}</td>
+        <td>{{bill.email}}</td>
         <td>{{bill.TongTien}}</td>
-        
+        <td><button class="btn btn-danger" (click)='xoa(bill.id)'>Xóa hóa đơn</button></td>
       </tr>
     </tbody>
   </table>
