--- a/src/app/src/_modules/admin/admin-duyet/admin-duyet.component.html
+++ b/src/app/src/_modules/admin/admin-duyet/admin-duyet.component.html
@@ -17,7 +17,7 @@
       <td>{{khoahoc.TenKH}}</td>
       <td>{{khoahoc.GiaTien | number:'.0'}} <sup>đ</sup></td>      
       <td>
-        <button matButton class="btn btn-secondary mr-2 "(click)='layBaiGiang(khoahoc.BaiGiang)'>Xem Bài Giảng</button>
+        <a matButton class="btn btn-secondary mr-2 "(click)='layBaiGiang(khoahoc.BaiGiang)' href="/admin/duyet-khoa-hoc#baiGiang"> Xem Bài Giảng</a>
         <button matButton class="btn btn-primary mr-2 " (click)='duyet(khoahoc.id)'>Duyệt Khóa Học</button>
         
       </td>
@@ -26,7 +26,7 @@
   </tbody>
 </table>
 <hr>
-<h4>Bài Giảng: </h4>
+<h4 id="baiGiang">Bài Giảng: </h4>
 <table class="table table-bordered table-responsive-sm table-striped col-md-11 mx-auto" id="dataTable1" width="100%" cellspacing="0">
     <thead class="table-primary">
       <tr>
@@ -43,7 +43,7 @@
         <td class="second">{{baiGiang.id}}</td>
         <td class="second">{{baiGiang.KhoaHoc_id}}</td>
         <td class="second">{{baiGiang.TenBaiGiang}}</td>
-        <td class="second"> <a class="play" href="{{baiGiang.EmbededURL}}">{{baiGiang.EmbededURL}}</a>
+        <td class="second"> <a class="play" href="{{baiGiang.EmbededURL}}">Xem thử: {{baiGiang.EmbededURL}}</a>
   
       </tr>
     </tbody>
