--- a/src/app/src/_modules/mod/mod-create-lecture/mod-create-lecture.component.html
+++ b/src/app/src/_modules/mod/mod-create-lecture/mod-create-lecture.component.html
@@ -62,9 +62,9 @@
                   </div>
                   <hr>
                   <input type="text" formControlName="MoTa" placeholder="Mô tả" class="form-control"
-                    [ngClass]="{ 'is-invalid': submitted && cd.controls.MoTa.errors }" required minlength="10" />
+                    [ngClass]="{ 'is-invalid': submitted && cd.controls.MoTa.errors }"  minlength="10" />
                   <div *ngIf="submitted && cd.controls.MoTa.errors" class="invalid-feedback">
-                    <div *ngIf="cd.controls.MoTa.errors.required">Cần nhập Mô tả</div>
+                    <!-- <div *ngIf="cd.controls.MoTa.errors.required">Cần nhập Mô tả</div> -->
                     <div *ngIf="cd.controls.MoTa.errors.minlength">Cần nhập nhiều hơn 10 ký tự</div>
                   </div>
                   <hr>
@@ -158,7 +158,7 @@
                 <input type="textarea" class="form-control" #mota='ngModel' name='TomTat' ngModel minlength="10" placeholder="{{short}}">
                 <div *ngIf='mota.errors && (mota.touched || mota.dirty)'>
                   <div *ngIf='mota.errors.minlength' class="alert alert-danger">
-                    Tên khóa học phải nhiều hơn 10 ký tự
+                    Tóm tắt phải nhiều hơn 10 ký tự
                   </div>
                 </div>
               </div>
